--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,19 @@
 name        = XML-XSS
-version     = 0.0_1
+version     = 0.1_0
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Perl_5
 copyright_holder = Yanick Champoux
 
 [ModuleBuild]
 
+[GithubMeta]
+remote=github
 
-;[MetaYAML]
+[Homepage]
+[Bugtracker]
+
+[MetaYAML]
+[MetaJSON]
 
 ;[ExecDir]
 ;dir=scripts
@@ -25,11 +31,17 @@ time_zone = America/Montreal
 [PkgVersion]
 [PodVersion]
 
+[ReportVersions]
+
+[Signature]
+
+[AutoPrereq]
+
 
 ; Build
 
 ; Release 
-;[TestRelease]
+[TestRelease]
 
 [ConfirmRelease]
 
@@ -37,17 +49,18 @@ time_zone = America/Montreal
 
 [Git::Commit]
 
-;[Git::Push]
-;push_to = github
+[Git::Push]
+push_to = github
+
 [Git::CommitBuild]
 release_branch = releases
 
 [Git::Tag]
-tag_format = code/v%v
+tag_format = v%v
 branch = releases
 
-[FakeRelease]
-;[UploadToCPAN]
+;[FakeRelease]
+[UploadToCPAN]
 
-;[Twitter]
-;hash_tags = #perl #cpan #git
+[Twitter]
+hash_tags = #perl #xml-xss
