--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name        = XML-XSS
-version     = 0.1_0
+version     = 0.1_1
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Perl_5
 copyright_holder = Yanick Champoux
@@ -41,6 +41,8 @@ time_zone = America/Montreal
 ; Build
 
 ; Release 
+[CheckChangesHasContent]
+
 [TestRelease]
 
 [ConfirmRelease]
