--- a/dist.ini
+++ b/dist.ini
@@ -61,8 +61,8 @@ release_branch = releases
 tag_format = v%v
 branch = releases
 
-;[FakeRelease]
-[UploadToCPAN]
+[FakeRelease]
+;[UploadToCPAN]
 
 [Twitter]
 hash_tags = #perl #xml-xss
