--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name        = XML-XSS
-version     = 0.1_2
+version     = 0.1.3
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Perl_5
 copyright_holder = Yanick Champoux
@@ -67,4 +67,4 @@ push_to = github
 [UploadToCPAN]
 
 [Twitter]
-hash_tags = #perl #xml-xss
+;hash_tags = #perl #xml-xss
