--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name        = XML-XSS
-version     = 0.1.3
+version     = 0.2.0
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Perl_5
 copyright_holder = Yanick Champoux
@@ -17,8 +17,7 @@ remote=github
 
 [PodWeaver]
 
-;[ExecDir]
-;dir=scripts
+[ExecDir]
 
 [License]
 
