--- a/dist.ini
+++ b/dist.ini
@@ -1,69 +1,7 @@
 name        = XML-XSS
-version     = 0.2_0
+version     = 0.3.0
 author      = Yanick Champoux <yanick@cpan.org>
 license     = Perl_5
 copyright_holder = Yanick Champoux
 
-[ModuleBuild]
-
-[GithubMeta]
-remote=github
-
-[Homepage]
-[Bugtracker]
-
-[MetaYAML]
-[MetaJSON]
-
-[PodWeaver]
-
-[ExecDir]
-
-[License]
-
-[NextRelease]
-time_zone = America/Montreal
-
-[MatchManifest]
-[ManifestSkip]
-
-[GatherDir]
-
-[PkgVersion]
-[PodVersion]
-
-[ReportVersions]
-
-[Signature]
-
-[AutoPrereq]
-
-
-; Build
-
-; Release 
-[CheckChangesHasContent]
-
-[TestRelease]
-
-[ConfirmRelease]
-
-[Git::Check]
-
-[Git::Commit]
-
-[Git::CommitBuild]
-release_branch = releases
-
-[Git::Tag]
-tag_format = v%v
-branch = releases
-
-[Git::Push]
-push_to = github
-
-;[FakeRelease]
-[UploadToCPAN]
-
-[Twitter]
-;hash_tags = #perl #xml-xss
+[@YANICK]
