--- a/META.yml
+++ b/META.yml
@@ -3,18 +3,21 @@ abstract: 'XML stylesheet system'
 author:
   - 'Yanick Champoux <yanick@cpan.org>'
 build_requires:
-  File::Find: 0
-  File::Temp: 0
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Module::Build: 0.3601
   Test::Class: 0
   Test::Class::Load: 0
   Test::More: 0.94
+  Test::Script: 1.05
   base: 0
+  lib: 0
   strict: 0
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,43 +26,42 @@ name: XML-XSS
 provides:
   XML::XSS:
     file: lib/XML/XSS.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Comment:
     file: lib/XML/XSS/Comment.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Document:
     file: lib/XML/XSS/Document.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Element:
     file: lib/XML/XSS/Element.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::ProcessingInstruction:
     file: lib/XML/XSS/ProcessingInstruction.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Role::Renderer:
     file: lib/XML/XSS/Role/Renderer.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Role::StyleAttribute:
     file: lib/XML/XSS/Role/StyleAttribute.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::StyleAttribute:
     file: lib/XML/XSS/StyleAttribute.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Stylesheet::HTML2TD:
     file: lib/XML/XSS/Stylesheet/HTML2TD.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Template:
     file: lib/XML/XSS/Template.pm
-    version: v0.3.2
+    version: v0.3.3
   XML::XSS::Text:
     file: lib/XML/XSS/Text.pm
-    version: v0.3.2
+    version: v0.3.3
 requires:
   Getopt::Long: 0
   Moose: 0
   Moose::Exporter: 0
   Moose::Role: 0
-  MooseX::AttributeHelpers: 0
   MooseX::ClassAttribute: 0
   MooseX::Clone: 0
   MooseX::SemiAffordanceAccessor: 0
@@ -73,10 +75,11 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=XML-XSS
   homepage: http://search.cpan.org/dist/XML-XSS/
   repository: https://github.com/yanick/xml-xss.git
-version: 0.3.2
+version: 0.3.3
 x_author_pledge:
   version: 1
 x_authority: cpan:YANICK
 x_contributors:
   - 'Dave Rolsky <autarch@urth.org>'
+  - 'Karen Etheridge <ether@cpan.org>'
   - 'Reini Urban <rurban@cpan.org>'
