--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,6 @@ build_requires:
   Test::Class: 0
   Test::Class::Load: 0
   Test::More: 0.94
-  Test::Script: 1.05
   base: 0
   lib: 0
   strict: 0
@@ -26,37 +25,37 @@ name: XML-XSS
 provides:
   XML::XSS:
     file: lib/XML/XSS.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Comment:
     file: lib/XML/XSS/Comment.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Document:
     file: lib/XML/XSS/Document.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Element:
     file: lib/XML/XSS/Element.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::ProcessingInstruction:
     file: lib/XML/XSS/ProcessingInstruction.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Role::Renderer:
     file: lib/XML/XSS/Role/Renderer.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Role::StyleAttribute:
     file: lib/XML/XSS/Role/StyleAttribute.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::StyleAttribute:
     file: lib/XML/XSS/StyleAttribute.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Stylesheet::HTML2TD:
     file: lib/XML/XSS/Stylesheet/HTML2TD.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Template:
     file: lib/XML/XSS/Template.pm
-    version: v0.3.3
+    version: v0.3.4
   XML::XSS::Text:
     file: lib/XML/XSS/Text.pm
-    version: v0.3.3
+    version: v0.3.4
 requires:
   Getopt::Long: 0
   Moose: 0
@@ -75,11 +74,12 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=XML-XSS
   homepage: http://search.cpan.org/dist/XML-XSS/
   repository: https://github.com/yanick/xml-xss.git
-version: 0.3.3
+version: 0.3.4
 x_author_pledge:
   version: 1
 x_authority: cpan:YANICK
 x_contributors:
+  - 'Alexandr Ciornii <chorny@cpan.org>'
   - 'Dave Rolsky <autarch@urth.org>'
   - 'Karen Etheridge <ether@cpan.org>'
   - 'Reini Urban <rurban@cpan.org>'
